<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/machineMaster"
    android:paddingHorizontal="22dp"
    tools:context=".ui.MachinesMaster">


    <TextView
        android:id="@+id/tvMMCode"
        style="@style/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/Code"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMMName"
        style="@style/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMMCode" />

    <TextView
        android:id="@+id/tvMMProdLine"
        style="@style/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ProdLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMMName" />

    <TextView
        android:id="@+id/tvMMProdPlant"
        style="@style/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/prodPlant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMMProdLine" />

    <TextView
        android:id="@+id/tvMMLocation"
        style="@style/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMMProdPlant" />

    <TextView
        android:id="@+id/tvMMState"
        style="@style/tvStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/State"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMMLocation" />

    <EditText
        android:id="@+id/etMMCode"
        style="@style/etStyle"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvMMCode"
        app:layout_constraintStart_toEndOf="@+id/tvMMProdPlant" />

    <EditText
        android:id="@+id/etMMName"
        style="@style/etStyle"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvMMName"
        app:layout_constraintStart_toEndOf="@+id/tvMMProdPlant" />

    <EditText
        android:id="@+id/etMMLocation"
        style="@style/etStyle"
        android:layout_width="153dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMMLocation"
        app:layout_constraintStart_toEndOf="@+id/tvMMProdPlant" />

    <Spinner
        android:id="@+id/spinMMProdLine"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMMProdLine"
        app:layout_constraintStart_toEndOf="@+id/tvMMProdPlant" />

    <Spinner
        android:id="@+id/spinMMProdPlant"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMMProdPlant"
        app:layout_constraintStart_toEndOf="@+id/tvMMProdPlant" />

    <Spinner
        android:id="@+id/spinMMState"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMMState"
        app:layout_constraintStart_toEndOf="@+id/tvMMProdPlant" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMMState" />

</androidx.constraintlayout.widget.ConstraintLayout>